--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,9 +4,25 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="style.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,500;0,600;1,100;1,200;1,300&display=swap" rel="stylesheet">
 	<title>This is FRONTEND</title>
 </head>
 <body>
-	<div id="root"></div>
+	<div id="root">
+		<div class="container">
+			<div><h1>Password recovery</h1></div>
+			<div class="text-container"><p>Please write the answer of your security question into the following input field and press Enter. <br> Your security question is: <br><span class="question">What was your first pet's name?</span></p>
+			
+				<div><form action=""> 
+					<input class="input-field" type="text" id="fname" name="fname" placeholder="Write your first pet's name here..."></form></div></div>
+			</div>
+		
+			</div>
+			
+<div class="circle"><button class="question-mark">?</button></div>
+	</div>
 </body>
 </html>
